modified login and register page

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ GITHUB_ID=a5716d99a3c12c7a2889
 GITHUB_SECRET=aa3fdd350fa21375c7b011ae830bb4c4b0ffcc8e
 GOOGLE_ID=48602719743-bf3glrhfqtu25por8cfs1ssschr5eio4.apps.googleusercontent.com
 GOOGLE_SECRET=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
-DATABASE_URL="mongodb+srv://saisanjay7660:vitap12345@cluster0.bumawuh.mongodb.net/deepbinder"
+DATABASE_URL="mongodb+srv://saisanjay7660:vitap12345@cluster0.bumawuh.mongodb.net/deepbinder?ssl=true&connectTimeoutMS=5000&maxPoolSize=50"
+# DATABASE_URL="mongodb://127.0.0.1:27017/deepbinder?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.0.1" #local development
 TWITTER_ID=NThLaDN5Vlp0eWk4VnB2LWNBTEQ6MTpjaQ
 TWITTER_SECRET=KXEtN7Pu8Orz2ZAWAeO5w_ekfae4kiTz2qNK8JAoBRmsF5uAIV
